--- a/index.html
+++ b/index.html
@@ -7,21 +7,17 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./styles/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>AgatMix</title>
   </head>
   <body>
     <header class="header">
       <div class="header__inner container">
         <a class="header__logo logo" href="/">
-          <img
-            class="logo__image"
-            src="./images/logo.svg"
-            alt="Creativeart"
-            width="196"
-            height="38"
-            loading="lazy"
-          />
+          <img class="logo__image" 
+						src="./images/AgatMixLogo.svg" 
+						alt="Creativeart" 
+						 loading="lazy">
         </a>
         <nav class="header__menu hidden-mobile">
           <ul class="header__menu-list">
@@ -62,17 +58,17 @@
             <div class="hero__main">
               <div class="hero__body">
                 <h1 class="hero__title">
-                  Discover and Collect The Best NFTs
-                  <span class="puddle-bg">Digital Art.</span>
+                  Лучшие украшения для вашего 
+                  <span class="puddle-bg">уникального стиля.</span>
                 </h1>
-                <div class="hero__description">
+             <!--    <div class="hero__description">
                   <p>
                     Get started with the easiest and most secure platform to buy
                     and trade digital ART and NFT’s. Start exploring the world
                     of digital art and NFTs today and take control of your
                     digital assets with confidence!
                   </p>
-                </div>
+                </div> -->
                 <div class="container__buttons hero__buttons-wrapper">
                   <button class="hero__button button" type="button">
                     Explore Now
