--- a/index.html
+++ b/index.html
@@ -628,33 +628,6 @@
                     <span class="puddle-bg">наши Обновления</span>
                     каждую Неделю
                   </h2>
-                  <div class="banner__description">
-                    <p>
-                      Что то тоже более подробное и интересное
-                      <br />
-                      А может и нах надо похрен, всеравно не читают
-                    </p>
-                  </div>
-
-                  <!-- <form class="banner-form">
-                    <div class="banner-form__body">
-                      <div class="banner-form__field field">
-                        <label class="field__label visually-hidden" for="email"
-                          >Введите вашу почту</label
-                        >
-                        <input
-                          class="field__input"
-                          id="email"
-                          name="email"
-                          placeholder="Enter your e-mail"
-                          type="email"
-                        />
-                      </div>
-                      <button class="banner__button button" type="submit">
-                        Подписаться
-                      </button>
-                    </div>
-                  </form> -->
                 </div>
               </div>
             </div>
@@ -680,9 +653,9 @@
                       <span></span>
                       <span></span>
                       <span></span>
-                      <span class="fab fa-facebook-f"></span>
+                      <span class="fab fa-vk"></span>
                     </div>
-										<div class="soc1als__text">Facebook</div>
+										<div class="soc1als__text">Вконтакте</div>
                   </a>
                 </li>
                 <li class="soc1als__item">
@@ -692,9 +665,9 @@
                       <span></span>
                       <span></span>
                       <span></span>
-                      <span class="fab fa-twitter"></span>
+                      <span class="fab fa-telegram"></span>
                     </div>
-										<div class="soc1als__text">Twitter</div>
+										<div class="soc1als__text">Telegram</div>
                   </a>
                 </li>
                 <li class="soc1als__item">
@@ -709,7 +682,7 @@
 										<div class="soc1als__text">Instagram</div>
                   </a>
                 </li>
-                <li class="soc1als__item">
+                <!-- <li class="soc1als__item">
                   <a class="soc1als__link" href="">
                     <div class="soc1als__layer">
                       <span></span>
@@ -720,7 +693,7 @@
                     </div>
 										<div class="soc1als__text">linkedin</div>
                   </a>
-                </li>
+                </li> -->
                <!--  <li class="soc1als__item">
                   <a class="soc1als__link" href="">
                     <div class="soc1als__layer">
