--- a/index.html
+++ b/index.html
@@ -408,21 +408,6 @@
                     Создавай свой лучший
                     <span class="puddle-bg">Образ</span>
                   </h2>
-                  <div class="banner__description">
-                    <p>
-                      Что то интересное но пока не придуманное
-                      <br />
-                      Что то интересное но пока не придуманное
-                    </p>
-                  </div>
-                  <!-- <div class="container__buttons">
-                    <button class="banner__button button">Create Now</button>
-                    <button
-                      class="button button--transparent button--non-style"
-                    >
-                      Learn More
-                    </button>
-                  </div> -->
                 </div>
                 <div class="banner__image banner__image--services">
                   <img
@@ -640,14 +625,27 @@
       <div class="footer__inner">
         <div class="footer__body">
           <div class="footer__content">
-            <a class="footer-logo" href="/">
+            <span class="footer-logo" href="/">
               <img src="./images/AgatMixLogo.svg" alt="" loading="lazy" />
-            </a>
+						</span>
             <div class="footer__soc1als soc1als">
 
               <ul class="soc1als__list">
+								
                 <li class="soc1als__item">
-                  <a class="soc1als__link" href="">
+                  <a class="soc1als__link" href="https://www.instagram.com/agatmix_shop/" target="_blank">
+                    <div class="soc1als__layer">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span class="fab fa-instagram"></span>
+                    </div>
+										<div class="soc1als__text">Instagram</div>
+                  </a>
+                </li>
+                <li class="soc1als__item">
+                  <a class="soc1als__link" href="https://vk.com/gordeevsayonara" target="_blank">
                     <div class="soc1als__layer">
                       <span></span>
                       <span></span>
@@ -659,7 +657,7 @@
                   </a>
                 </li>
                 <li class="soc1als__item">
-                  <a class="soc1als__link" href="">
+                  <a class="soc1als__link" href="https://t.me/agatmix0506" target="_blank">
                     <div class="soc1als__layer">
                       <span></span>
                       <span></span>
@@ -668,18 +666,6 @@
                       <span class="fab fa-telegram"></span>
                     </div>
 										<div class="soc1als__text">Telegram</div>
-                  </a>
-                </li>
-                <li class="soc1als__item">
-                  <a class="soc1als__link" href="">
-                    <div class="soc1als__layer">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span class="fab fa-instagram"></span>
-                    </div>
-										<div class="soc1als__text">Instagram</div>
                   </a>
                 </li>
                 <!-- <li class="soc1als__item">
