--- a/index.html
+++ b/index.html
@@ -409,24 +409,30 @@
                     <span class="puddle-bg">Образ</span>
                   </h2>
                 </div>
-                <div class="banner__image banner__image--services">
-                  <img
-                    class="banner__image-left banner__image-left--services"
-                    src="./images/banner-bg-1.png"
-                    alt=""
-                    width="410"
-                    height="400"
-                    loading="lazy"
-                  />
-                  <img
-                    class="banner__image-right banner__image-right--services"
-                    src="./images/banner-bg-2.png"
-                    alt=""
-                    width="410"
-                    height="475"
-                    loading="lazy"
-                  />
-                </div>
+								<div class="banner__image-wrapper">
+									<div class="banner__image-box">
+
+										<div class="banner__image">
+											<img
+											src="./images/banner-bg-1.png"
+											alt=""
+											width="410"
+											height="400"
+											loading="lazy"
+										/>
+										</div>
+										<div class="banner__image">
+											<img
+											src="./images/banner-bg-2.png"
+											alt=""
+											width="410"
+											height="475"
+											loading="lazy"
+										/>
+										</div>
+										
+									</div>
+								</div>
               </div>
             </div>
           </div>
@@ -588,24 +594,30 @@
 
             <div class="artists__banner banner">
               <div class="banner__inner">
-                <div class="banner__image banner__image--artists">
-                  <img
-                    class="banner__image-left banner__image-left--artists"
-                    src="./images/artists/1.jpg"
-                    alt=""
-                    width="410"
-                    height="376"
-                    loading="lazy"
-                  />
-                  <img
-                    class="banner__image-right banner__image-right--artists"
-                    src="./images/banner-bg-1.png"
-                    alt=""
-                    width="282"
-                    height="348"
-                    loading="lazy"
-                  />
-                </div>
+
+								<div class="banner__image-wrapper">
+									<div class="banner__image-box">
+										<div class="banner__image banner__image--one">
+											<img
+												src="./images/artists/1.jpg"
+												alt=""
+												width="410"
+												height="376"
+												loading="lazy"
+											/>
+										</div>
+										<div class="banner__image banner__image--two">
+											<img
+											src="./images/banner-bg-1.png"
+											alt=""
+											width="282"
+											height="348"
+											loading="lazy"
+										/>
+										</div>
+									</div>
+								</div>
+
 
                 <div class="banner__body">
                   <h2 id="subscribe" class="banner__title">
