Добавил описание карточке товара

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   </div>
                   <div class="service-card__body">
                     <div class="service-card__title">
-                      <h3>Садомит гребенчатый</h3>
+                      <h3>Ожерелье AgatMix</h3>
                       <div class="service-card__title-wrapper">
                         <span
                           ><svg
@@ -169,9 +169,12 @@
                             />
                           </svg>
                         </span>
-                        <span>5000₽</span>
+                        <span>10000₽</span>
                       </div>
                     </div>
+										<div class="service-card__description">
+											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, ad. Eaque eos dolorem, officiis perspiciatis magni.</p>
+										</div>
                     <div class="service-card__bottom">
                       <div class="service-card__bottom-times">
                         <span class="service-card__bottom-title"
@@ -219,14 +222,14 @@
                   <div class="service-card__images">
                     <img
                       class="service-card__image"
-                      src="./images/catalog/SaveClip.App_440721183_1627745854446348_3348864271489601492_n.jpg"
+                      src="./images/catalog/SaveClip.App_440725154_1642710043152556_6954415110115756854_n.jpg"
                       alt=""
                       loading="lazy"
                     />
                   </div>
                   <div class="service-card__body">
                     <div class="service-card__title">
-                      <h3>Садомит гребенчатый</h3>
+                      <h3>Ожерелье AgatMix</h3>
                       <div class="service-card__title-wrapper">
                         <span
                           ><svg
@@ -262,9 +265,12 @@
                             />
                           </svg>
                         </span>
-                        <span>5000₽</span>
+                        <span>10000₽</span>
                       </div>
                     </div>
+										<div class="service-card__description">
+											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, ad. Eaque eos dolorem, officiis perspiciatis magni.</p>
+										</div>
                     <div class="service-card__bottom">
                       <div class="service-card__bottom-times">
                         <span class="service-card__bottom-title"
@@ -312,14 +318,14 @@
                   <div class="service-card__images">
                     <img
                       class="service-card__image"
-                      src="./images/catalog/SaveClip.App_440760437_781568817277331_8487314234849992835_n.jpg"
+                      src="./images/catalog/SaveClip.App_440725154_1642710043152556_6954415110115756854_n.jpg"
                       alt=""
                       loading="lazy"
                     />
                   </div>
                   <div class="service-card__body">
                     <div class="service-card__title">
-                      <h3>Садомит гребенчатый</h3>
+                      <h3>Ожерелье AgatMix</h3>
                       <div class="service-card__title-wrapper">
                         <span
                           ><svg
@@ -355,9 +361,12 @@
                             />
                           </svg>
                         </span>
-                        <span>5000₽</span>
+                        <span>10000₽</span>
                       </div>
                     </div>
+										<div class="service-card__description">
+											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, ad. Eaque eos dolorem, officiis perspiciatis magni.</p>
+										</div>
                     <div class="service-card__bottom">
                       <div class="service-card__bottom-times">
                         <span class="service-card__bottom-title"
