--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   </div>
                   <div class="service-card__body">
                     <div class="service-card__title">
-                      <h3>Ожерелье AgatMix</h3>
+                      <h3>Ожерелье Agat<span class="agatmix-bg">Mix</span></h3>
                       <div class="service-card__title-wrapper">
                         <span
                           ><svg
@@ -229,7 +229,7 @@
                   </div>
                   <div class="service-card__body">
                     <div class="service-card__title">
-                      <h3>Ожерелье AgatMix</h3>
+                      <h3>Ожерелье Agat<span class="agatmix-bg">Mix</span></h3>
                       <div class="service-card__title-wrapper">
                         <span
                           ><svg
@@ -325,7 +325,7 @@
                   </div>
                   <div class="service-card__body">
                     <div class="service-card__title">
-                      <h3>Ожерелье AgatMix</h3>
+                      <h3>Ожерелье Agat<span class="agatmix-bg">Mix</span></h3>
                       <div class="service-card__title-wrapper">
                         <span
                           ><svg
@@ -452,7 +452,7 @@
         <header class="section__header">
           <h2 id="artists" class="section__title">
             Популярные <span class="puddle-bg">Артисты</span><br />
-            с моими украшениями
+            с украшениями Agat<span class="agatmix-bg">Mix</span>
           </h2>
           <button class="button button" type="button">Смотреть все</button>
         </header>
